App19:统一ExceptionView的UI风格

--- a/App19.SciChart/Views/AudioAnalyzerWindow.xaml
+++ b/App19.SciChart/Views/AudioAnalyzerWindow.xaml
@@ -56,5 +56,12 @@
             </s:SciChartSurface.YAxis>
 
         </s:SciChartSurface>
+
+        <WrapPanel VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="5">
+            <ComboBox ItemsSource="{Binding AvailableDevices}"
+                      SelectedIndex="{Binding SelectedIndex}"
+                      DisplayMemberPath="DisplayName"
+                      Width="200" />
+        </WrapPanel>
     </Grid>
 </Window>
