--- a/App19.SciChart/App.xaml
+++ b/App19.SciChart/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="App19.SciChart.App"
+﻿<Application x:Class="App19.SciChart00.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:s="http://schemas.abtsoftware.co.uk/scichart"
