--- a/App18.Material/Views/PageDemo1.xaml
+++ b/App18.Material/Views/PageDemo1.xaml
@@ -3,9 +3,47 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:viewModels="clr-namespace:App18.Material.ViewModels"
+             xmlns:md="clr-namespace:App18.Material.Models"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DataContext="{d:DesignInstance viewModels:Demo1ViewModel, IsDesignTimeCreatable=True}"
+             d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <TextBlock FontSize="32">Page Demo 1</TextBlock>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+
+        <ListBox ItemsSource="{Binding Demo1Items}"
+                 SelectedIndex="{Binding SelectedIndex}"
+                 SelectedItem="{Binding SelectedItem, UpdateSourceTrigger=PropertyChanged}"
+                 Margin="0,16,0,0"
+                 Grid.Column="0">
+            <ListBox.Resources>
+                <Style TargetType="ScrollViewer"
+                       BasedOn="{StaticResource MaterialDesignScrollViewer}" />
+                <Style TargetType="ScrollBar"
+                       BasedOn="{StaticResource MaterialDesignScrollBarMinimal}" />
+                <DataTemplate DataType="{x:Type md:Demo1Item}">
+                    <TextBlock Text="{Binding Name}" TextTrimming="CharacterEllipsis" />
+                </DataTemplate>
+            </ListBox.Resources>
+            <ListBox.ItemContainerStyle>
+                <Style TargetType="ListBoxItem"
+                       BasedOn="{StaticResource MaterialDesign3.NavigationDrawerPrimaryListBoxItem}">
+                    <Setter Property="materialDesign:NavigationDrawerAssist.SelectedIcon"
+                            Value="{Binding SelectedIcon}" />
+                    <Setter Property="materialDesign:NavigationDrawerAssist.UnselectedIcon"
+                            Value="{Binding UnselectedIcon}" />
+                    <Setter Property="Width" Value="280" />
+                </Style>
+            </ListBox.ItemContainerStyle>
+        </ListBox>
+
+        <ContentControl Margin="{Binding MarginRequirement, FallbackValue=16}"
+                        Content="{Binding Content, UpdateSourceTrigger=PropertyChanged, FallbackValue={x:Null}}"
+                        DataContext="{Binding SelectedItem}"
+                        Grid.Column="1" />
     </Grid>
 </UserControl>
