--- a/App18.Material/Views/PageDemo1.xaml
+++ b/App18.Material/Views/PageDemo1.xaml
@@ -7,6 +7,7 @@
              xmlns:md="clr-namespace:App18.Material.Models"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d"
+             Background="{DynamicResource PrimaryHueLightBrush}"
              d:DataContext="{d:DesignInstance viewModels:Demo1ViewModel, IsDesignTimeCreatable=True}"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
@@ -18,7 +19,7 @@
         <ListBox ItemsSource="{Binding Demo1Items}"
                  SelectedIndex="{Binding SelectedIndex}"
                  SelectedItem="{Binding SelectedItem, UpdateSourceTrigger=PropertyChanged}"
-                 Margin="0,16,0,0"
+                 Margin="10,16,10,0"
                  Grid.Column="0">
             <ListBox.Resources>
                 <Style TargetType="ScrollViewer"
@@ -36,7 +37,7 @@
                             Value="{Binding SelectedIcon}" />
                     <Setter Property="materialDesign:NavigationDrawerAssist.UnselectedIcon"
                             Value="{Binding UnselectedIcon}" />
-                    <Setter Property="Width" Value="280" />
+                    <Setter Property="Width" Value="260" />
                 </Style>
             </ListBox.ItemContainerStyle>
         </ListBox>
