--- a/App18.Material/Views/PageDemo2.xaml
+++ b/App18.Material/Views/PageDemo2.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
+             Background="{DynamicResource PrimaryHueLightBrush}"
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
         <Image Source="pack://application:,,,/Resources/illustrations/IMG_0641.jpg" Stretch="Fill"
