--- a/App18.Material/Views/PageHome.xaml
+++ b/App18.Material/Views/PageHome.xaml
@@ -3,9 +3,101 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:vm="clr-namespace:App18.Material.ViewModels"
+             xmlns:models="clr-namespace:App18.Material.Models"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DataContext="{d:DesignInstance vm:PageHomeViewModel, IsDesignTimeCreatable=True}"
+             Background="{DynamicResource PrimaryHueLightBrush}"
+             d:DesignHeight="600" d:DesignWidth="1000">
     <Grid>
+        <ListView Width="300"
+                  HorizontalAlignment="Left" VerticalAlignment="Top"
+                  ItemsSource="{Binding EmailList}">
+            <ListView.ItemContainerStyle>
+                <Style TargetType="{x:Type ListViewItem}">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type ListViewItem}">
+                                <Border x:Name="PART_Bar" Margin="0,12,0,0" Background="#8FFF" CornerRadius="4">
+                                    <Grid Width="300" Height="120">
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="Auto" />
+                                            <RowDefinition Height="*" />
+                                        </Grid.RowDefinitions>
+                                        <StackPanel Height="50" Margin="5" Orientation="Horizontal" Grid.Row="0">
+                                            <Image Width="30" Height="30" Margin="5,5,0,5" VerticalAlignment="Center"
+                                                   HorizontalAlignment="Center"
+                                                   Source="https://img-blog.csdnimg.cn/20190323161418695.png" />
+
+                                            <StackPanel Margin="5,5,0,5" VerticalAlignment="Center">
+                                                <TextBlock Text="{Binding Name}" />
+                                                <TextBlock Text="{Binding Time}" />
+                                            </StackPanel>
+                                        </StackPanel>
+                                        <StackPanel Margin="5,0,5,5" Grid.Row="1">
+                                            <TextBlock FontWeight="Bold" Margin="5,0,5,5"
+                                                       Text="{Binding Subject}" />
+
+                                            <TextBlock VerticalAlignment="Top" Margin="5,0,0,0"
+                                                       Text="{Binding Content}"
+                                                       TextWrapping="Wrap" />
+                                        </StackPanel>
+                                    </Grid>
+                                </Border>
+
+                                <ControlTemplate.Triggers>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter TargetName="PART_Bar" Property="Background"
+                                                Value="{DynamicResource PrimaryHueLightBrush}" />
+                                        <Setter TargetName="PART_Bar" Property="Opacity" Value="0.5" />
+                                        <Setter Property="TextElement.Foreground"
+                                                Value="{DynamicResource PrimaryHueMidForegroundBrush}" />
+                                    </Trigger>
+                                    <Trigger Property="IsSelected" Value="True">
+                                        <Setter TargetName="PART_Bar" Property="Background"
+                                                Value="{DynamicResource PrimaryHueLightBrush}" />
+                                        <Setter TargetName="PART_Bar" Property="Opacity" Value="1" />
+                                        <Setter Property="TextElement.Foreground"
+                                                Value="{DynamicResource PrimaryHueDarkForegroundBrush}" />
+                                    </Trigger>
+                                </ControlTemplate.Triggers>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </ListView.ItemContainerStyle>
+
+            <ListView.ItemTemplate>
+                <DataTemplate DataType="{x:Type models:Email}">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+                        <StackPanel Height="60" Orientation="Horizontal" Grid.Row="0">
+                            <Image VerticalAlignment="Center" HorizontalAlignment="Center" />
+
+                            <StackPanel Margin="8,0,0,0">
+                                <TextBlock FontWeight="Bold" Text="{Binding Name}" />
+                                <TextBlock Text="{Binding Time}" />
+                            </StackPanel>
+                        </StackPanel>
+                        <StackPanel Grid.Row="1">
+                            <TextBlock Margin="16,16,16,8"
+                                       Style="{StaticResource MaterialDesignHeadline5TextBlock}"
+                                       Text="{Binding Subject}" />
+
+                            <TextBlock Margin="16,0,16,8"
+                                       VerticalAlignment="Top"
+                                       Foreground="{DynamicResource MaterialDesignBodyLight}"
+                                       Text="{Binding Content}"
+                                       TextWrapping="Wrap" />
+                        </StackPanel>
+                    </Grid>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+
         <Image Height="400" Width="400" Source="pack://application:,,,/Resources/girl-cleaning-dishes.png" />
     </Grid>
 </UserControl>
