--- a/App18.Material/Views/PageHome.xaml
+++ b/App18.Material/Views/PageHome.xaml
@@ -5,12 +5,14 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:vm="clr-namespace:App18.Material.ViewModels"
              xmlns:cv="clr-namespace:App18.Material.Converters"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance vm:PageHomeViewModel, IsDesignTimeCreatable=True}"
              Background="{DynamicResource PrimaryHueLightBrush}"
              d:DesignHeight="600" d:DesignWidth="1000">
     <UserControl.Resources>
         <cv:DateToHumanizeConverter x:Key="DateToHumanizeConverter" />
+        <cv:Empty2CollapsedConverter x:Key="Empty2CollapsedConverter" />
     </UserControl.Resources>
     <Grid>
         <ListView HorizontalAlignment="Left" VerticalAlignment="Top"
@@ -23,11 +25,13 @@
                                 <Border Margin="0,12,0,0" CornerRadius="4">
                                     <Grid>
                                         <Border x:Name="PART_Back" Background="#FFF" Opacity="0.4" CornerRadius="4" />
-                                        <Grid Width="280" Height="120" Margin="10">
+                                        <Grid Width="280" Margin="15">
                                             <Grid.RowDefinitions>
                                                 <RowDefinition Height="Auto" />
+                                                <RowDefinition Height="55" />
                                                 <RowDefinition Height="*" />
                                             </Grid.RowDefinitions>
+                                            
                                             <StackPanel Height="50" Orientation="Horizontal" Grid.Row="0">
                                                 <Image Width="35" Height="35" Margin="5,5,0,5"
                                                        VerticalAlignment="Center"
@@ -41,14 +45,21 @@
                                                         FontSize="10" Margin="0,2,0,0" />
                                                 </StackPanel>
                                             </StackPanel>
+                                            
                                             <StackPanel Grid.Row="1">
-                                                <TextBlock FontSize="15" Margin="5,0,5,5"
+                                                <TextBlock FontSize="15" FontWeight="DemiBold" Margin="5,0,5,5"
                                                            Text="{Binding Subject}" />
 
                                                 <TextBlock VerticalAlignment="Top" Margin="5,0,0,0"
                                                            Text="{Binding Content}"
                                                            TextWrapping="Wrap" TextTrimming="CharacterEllipsis" />
                                             </StackPanel>
+
+                                            <materialDesign:Card Grid.Row="2" Margin="5,5,5,0" UniformCornerRadius="4"
+                                                                 Visibility="{Binding Link1, Converter={StaticResource Empty2CollapsedConverter}}">
+                                                <Image Source="{Binding Link1}" Height="80"
+                                                       Stretch="UniformToFill" />
+                                            </materialDesign:Card>
                                         </Grid>
                                     </Grid>
                                 </Border>
